--- a/src/i18n/locales/id/forex.json
+++ b/src/i18n/locales/id/forex.json
@@ -1,41 +1,41 @@
 {
-  "foreignExchangeTransactions": "Foreign exchange transactions",
-  "theForeignExchange": "The foreign exchange market has an estimated daily trading volume of approximately US$ 5 trillion, making it the world's largest and most liquid financial market. By investing in foreign currencies through the WCG foreign exchange margin trading platform, you can participate in this exciting part of the financial world, get immediate institutional market prices, and 24-hour uninterrupted transactions. WCG foreign exchange trading account meets the different investment needs of users. New investors can also try our free demo account to experience the fast and easy-to-use MT4 trading platform.",
-  "viewTradingProducts": "View Trading Products",
-  "howToPerform": "How to perform foreign exchange transactions",
-  "foreignExchangeCurrencies": "Foreign exchange currencies always appear in pairs, for example: EUR/USD, GBP/USD, USD/JPY.",
-  "inForeignExchangeTrading": "In foreign exchange trading, you can either buy (long) or sell (short). However, when you trade foreign exchange currency pairs online, you are not buying or selling real currencies. Your operation is actually a bet on the rise or fall of a currency pair. The riseorfallofacurrencyisactuallyariseorfallrelativetoanothercurrency.",
-  "throughWCG": "Through WCG, you can trade direct and cross currencies, the minimum capital for opening an account is only US$ 100.",
-  "unlikeOther": "Unlike other financial markets, the foreign exchange market does not have a fixed central exchange or physical location. A 24-hour global network of foreign exchange transactions is formed by banks, large companies and individual traders. This means that foreign exchange rates fluctuate 24 hours a day, providing many trading opportunities.",
-  "buyLong": "Buy-long",
-  "judgeTheMarket": "Judge the market as an upward trend, hold it after buying a financial product, and wait for it to rise before selling, to earn the intermediate spread.",
-  "sellShort": "Sell-short",
-  "anticipatingThat": "Anticipating that the market will fall, sell the chips in hand and buy after the price drops; in short, it means selling first and then buying.",
-  "learnMore": "Learn More",
-  "startForexTrading": "Start forex trading in five easy steps",
-  "joinA24Hour": "Join a 24-hour global network of foreign exchange transactions composed of banks, large companies and individual traders",
-  "chooseAForeign": "Choose a foreign exchange currency pair",
-  "theFirstDecision": "The first decision to become a foreign exchange trader is to choose the foreign exchange currency pair you want to trade.",
-  "inWCG": "In WCG, we provide you with a wide range of products including direct and cross currency pairs. New traders often start trading with the currency pair they are most familiar with, and then look for trading opportunities in other currency pairs that are not so familiar.",
-  "determineTheDirection": "Determine the direction of buying and selling",
-  "afterChoosing": "After choosing your trading products, you should decide whether to buy or sell by speculating on the future direction of the market. A foreign exchange currency pair is composed of two currencies. The currency on the left hand side is called the \"base currency\" and the currency on the right hand side is called the \"quote currency\". Therefore:",
-  "ifYouThinkThatTheBaseCurrencyIsStronger": "If you think that the base currency is stronger than the quote currency, or the quote currency is relatively weaker than the base currency, then buy this currency pair.",
-  "ifYouThinkThatTheBaseCurrencyIsWeaker": "If you think that the base currency is weaker than the quote currency, or the quote currency is relatively stronger than the base currency, then sell the currency pair.",
-  "atTheSameTime": "At the same time, every currency pair has two prices at every moment. One is the bid price and the other is the ask price. The difference between the two prices is called the \"spread\", which is your transaction cost.",
-  "setStop": "Set stop loss/take profit",
-  "stopLossTakeProfit": "Stop loss/take profit is a preset price. When the exchange rate reaches this preset price, the corresponding position will be automatically closed.",
-  "thePurposeOf": "The purpose of setting stop loss/take profit is to lock the profit or loss of the position.",
-  "monitorYourTrading": "Monitor your trading positions",
-  "beforeThePositionIsClosed": "Before the position is closed, your profit and loss will change with price fluctuations.",
-  "soRealTimeMonitoring": "So real-time monitoring your profit and loss is very important. By monitoring the situation, you can add or close positions immediately when needed.",
-  "closeYourPosition": "Close your position",
-  "itIsExtremelyImportant": "It is extremely important for FOREX investors to timely close their position when identifying different phases of market movements.",
-  "FailingToDoSo": "Failing to do so are sometimes costly, in particular when the market moves against them.",
-  "foreignExchangeQuotes": "Foreign exchange quotes generally have five decimal places. Among them, the fourth decimal place is the one that requires the most attention. We often use pips to calculate profit and loss. Foreign exchange trading volume is generally counted in \"lots\", and 1 lot is equal to 100,000 base currency units. You can also trade units smaller than 1 lot, such as mini lots or micro lots. Mini lots correspond to 10,000 currency units (0.1lots), and micro lots correspond to 1,000 currency units (0.01lots).",
-  "supportLeverage": "Support leverage",
-  "youCanUtilizeLeverage": "You can utilize leverage to open a position larger than your capital amount. This approach may lead to more profits or losses. Therefore, it is very important to manage risks when conducting foreign exchange transactions.",
-  "fundingThreshold": "Funding threshold",
-  "whenTradingForeignExchange": "When trading foreign exchange online, you can decide the size of your open positions. Deposit a suitable amount of funds according to your own situation to participate in the transaction.",
-  "hoursTrading": "24 hours trading",
-  "fromMondayMorning": "From Monday morning to Saturday morning, the foreign exchange market is always open for trading. This makes the foreign exchange market an ideal trading market for amateur traders."
+  "foreignExchangeTransactions": "Transaksi valuta asing",
+  "theForeignExchange": "Pasar valuta asing memiliki perkiraan volume perdagangan harian sekitar US $ 5 triliun, menjadikannya pasar keuangan terbesar dan paling likuid di dunia。 Dengan berinvestasi dalam mata uang asing melalui platform perdagangan margin valuta asing WCG, Anda dapat berpartisipasi di bagian dunia keuangan yang menarik ini, mendapatkan harga pasar institusional langsung, dan transaksi 24 jam tanpa gangguan。 Akun perdagangan valuta asing WCG memenuhi kebutuhan investasi pengguna yang berbeda。 Investor baru juga dapat mencoba akun demo gratis kami untuk merasakan platform perdagangan MT4 yang cepat dan mudah digunakan.",
+  "viewTradingProducts": "Lihat produk perdagangan",
+  "howToPerform": "Bagaimana melakukan transaksi valuta asing",
+  "foreignExchangeCurrencies": "Mata uang valuta asing selalu muncul berpasangan, contoh: EUR/USD, GBP/USD, USD/JPY.",
+  "inForeignExchangeTrading": "Dalam perdagangan valuta asing, Anda dapat membeli (long) atau menjual (short)。 Namun, saat Anda memperdagangkan pasangan mata uang asing secara online, Anda tidak membeli atau menjual mata uang nyata。 Operasi Anda sebenarnya adalah spekulasi naik atau turunnya pasangan mata uang。 Naik atau turunnya suatu mata uang sebenarnya naik atau turun relatif terhadap mata uang lain。",
+  "throughWCG": "Melalui WCG, Anda dapat bertransaksi mata uang langsung dan lintas mata uang, modal minimum untuk membuka akun hanya US $ 100。",
+  "unlikeOther": "Tidak seperti pasar keuangan lainnya, pasar valuta asing tidak memiliki bursa sentral atau lokasi fisik yang tetap。 Jaringan transaksi valuta asing global 24 jam dibentuk oleh bank, perusahaan besar, dan pedagang individu。 Artinya, nilai tukar mata uang asing berfluktuasi 24 jam sehari, memberikan banyak peluang perdagangan。",
+  "buyLong": "Beli-Long",
+  "judgeTheMarket": "Nilailah pasar sebagai trend naik, tahan setelah membeli produk keuangan, dan tunggu hingga naik sebelum menjual, untuk mendapatkan selisih。",
+  "sellShort": "Jual-Short Sell",
+  "anticipatingThat": "Mengantisipasi bahwa pasar akan jatuh, jual kontrak yang di tangan dan beli setelah harga turun; singkatnya, itu berarti menjual dulu baru kemudian membeli。",
+  "learnMore": "lebih mengerti",
+  "startForexTrading": "Mulailah perdagangan forex dalam lima langkah mudah",
+  "joinA24Hour": "Bergabunglah dengan jaringan global transaksi valuta asing 24 jam yang terdiri dari bank, perusahaan besar, dan pedagang individu",
+  "chooseAForeign": "Pilih pasangan mata uang asing",
+  "theFirstDecision": "Keputusan pertama untuk menjadi pedagang valuta asing adalah memilih pasangan mata uang asing yang ingin Anda perdagangkan。",
+  "inWCG": "Di WCG, kami menyediakan berbagai macam produk termasuk pasangan mata uang langsung dan lintas mata uang。 Traders baru sering kali memulai perdagangan dengan pasangan mata uang yang paling mereka kenal, dan kemudian mencari peluang perdagangan pada pasangan mata uang lain yang tidak begitu dikenal。",
+  "determineTheDirection": "Tentukan arah jual beli",
+  "afterChoosing": "Setelah memilih produk perdagangan, Anda harus memutuskan apakah akan membeli atau menjual dengan berspekulasi tentang arah pasar di masa depan。 Pasangan mata uang asing terdiri dari dua mata uang。 Mata uang di sisi kiri disebut \"mata uang dasar\" dan mata uang di sisi kanan disebut \"mata uang kutipan\"。 Oleh itu ：",
+  "ifYouThinkThatTheBaseCurrencyIsStronger": "Jika Anda berpikir bahwa mata uang dasar lebih kuat dari mata uang kutipan, atau meta uang kutipan relatif lebih lemah daripada mata uang dasar, maka belilah pasangan mata uang ini。",
+  "ifYouThinkThatTheBaseCurrencyIsWeaker": "Jika Anda berpikir bahwa mata uang dasar lebih lemah dari mata uang kutipan, atau mata uang kutipan relatif lebih kuat daripada mata uang dasar, maka jual pasangan mata uang tersebut。",
+  "atTheSameTime": "Pada saat yang sama, setiap pasangan mata uang memiliki dua harga setiap saat。 Salah satunya adalah harga penawaran dan yang lainnya adalah harga permintaan。 Perbedaan antara kedua harga tersebut disebut \"spread\",dan merupakan biaya transaksi Anda。",
+  "setStop": "Tetapkan stop loss / take profit",
+  "stopLossTakeProfit": "Stop loss / take profit adalah harga preset。 Ketika nilai tukar mencapai harga preset ini, posisi terkait akan ditutup secara otomatis。",
+  "thePurposeOf": "Tujuan pengaturan stop loss / take profit adalah untuk mengunci posisi untung atau rugi。",
+  "monitorYourTrading": "Pantau posisi perdagangan Anda",
+  "beforeThePositionIsClosed": "Sebelum posisi ditutup, untung dan rugi Anda akan berubah seiring fluktuasi harga。",
+  "soRealTimeMonitoring": "Jadi pemantauan keuntungan dan kerugian Anda secara real-time sangat penting. Dengan memantau situasi, Anda dapat menambah atau menutup posisi segera saat dibutuhkan.",
+  "closeYourPosition": "Tutup posisi Anda",
+  "itIsExtremelyImportant": "Sangat penting bagi investor FOREX untuk menutup posisi mereka secara tepat waktu ketika mengidentifikasi berbagai fase pergerakan pasar.",
+  "FailingToDoSo": "Kegagalan untuk melakukannya terkadang mahal, khususnya ketika pasar bergerak melawan mereka.",
+  "foreignExchangeQuotes": "Kutipan valuta asing umumnya memiliki lima tempat desimal. Di antara mereka, tempat desimal keempat adalah yang paling membutuhkan perhatian. Kami sering gunakan pips untuk menghitung untung dan rugi. Volume perdagangan valuta asing umumnya dihitung dalam \"lot\", dan 1 lot sama dengan 100.000 unit mata uang dasar. Anda juga bisa unit perdagangan yang lebih kecil dari 1 lot, seperti lot mini atau lot mikro. Lot mini sesuai dengan 10.000 unit mata uang (0,1 lot), dan lot mikro sesuai hingga 1.000 unit mata uang (0,01 lot).",
+  "supportLeverage": "Dukungan leverage",
+  "youCanUtilizeLeverage": "Anda dapat memanfaatkan leverage untuk membuka posisi yang lebih besar dari jumlah modal Anda. Pendekatan ini dapat menyebabkan lebih banyak keuntungan atau kerugian. Oleh karena itu, sangat penting untuk mengelola risiko saat melakukan transaksi valuta asing.",
+  "fundingThreshold": "Ambang pendanaan",
+  "whenTradingForeignExchange": "Saat memperdagangkan valuta asing online, Anda dapat menentukan ukuran posisi terbuka Anda. Setorkan sejumlah dana yang sesuai dengan situasi Anda sendiri untuk berpartisipasi dalam transaksi.",
+  "hoursTrading": "perdagangan 24 jam",
+  "fromMondayMorning": "Dari Senin pagi hingga Sabtu pagi, pasar valuta asing selalu buka untuk perdagangan. Hal ini membuat pasar valuta asing menjadi pasar perdagangan yang ideal untuk pedagang amatir."
 }
