--- a/src/i18n/locales/my/forex.json
+++ b/src/i18n/locales/my/forex.json
@@ -1,41 +1,41 @@
 {
-  "foreignExchangeTransactions": "Foreign exchange transactions",
-  "theForeignExchange": "The foreign exchange market has an estimated daily trading volume of approximately US$ 5 trillion, making it the world's largest and most liquid financial market. By investing in foreign currencies through the WCG foreign exchange margin trading platform, you can participate in this exciting part of the financial world, get immediate institutional market prices, and 24-hour uninterrupted transactions. WCG foreign exchange trading account meets the different investment needs of users. New investors can also try our free demo account to experience the fast and easy-to-use MT4 trading platform.",
-  "viewTradingProducts": "View Trading Products",
-  "howToPerform": "How to perform foreign exchange transactions",
-  "foreignExchangeCurrencies": "Foreign exchange currencies always appear in pairs, for example: EUR/USD, GBP/USD, USD/JPY.",
-  "inForeignExchangeTrading": "In foreign exchange trading, you can either buy (long) or sell (short). However, when you trade foreign exchange currency pairs online, you are not buying or selling real currencies. Your operation is actually a bet on the rise or fall of a currency pair. The riseorfallofacurrencyisactuallyariseorfallrelativetoanothercurrency.",
-  "throughWCG": "Through WCG, you can trade direct and cross currencies, the minimum capital for opening an account is only US$ 100.",
-  "unlikeOther": "Unlike other financial markets, the foreign exchange market does not have a fixed central exchange or physical location. A 24-hour global network of foreign exchange transactions is formed by banks, large companies and individual traders. This means that foreign exchange rates fluctuate 24 hours a day, providing many trading opportunities.",
+  "foreignExchangeTransactions": "Urus niaga pertukaran mata wang asing",
+  "theForeignExchange": "Pasaran pertukaran asing mempunyai jumlah dagangan harian sekitar AS $ 5 trilion , menjadikannya pasaran kewangan terbesar dan paling cair di dunia. Dengan melabur dalam mata wang asing melalui platform perdagangan margin pertukaran asing WCG , anda boleh mengambil bahagian dalam dunia kewangan yang menarik ini , dapatkan harga pasaran institusi segera , dan urus niaga tanpa gangguan 24 jam. Akaun perdagangan pertukaran wang asing WCG memenuhi keperluan pelaburan pengguna yang berbeza. Pelabur baru juga boleh mencuba akaun demo percuma kami untuk menikmati platform perdagangan MT4 yang pantas dan mudah digunakan.",
+  "viewTradingProducts": "Lihat produk perdagangan",
+  "howToPerform": "Cara melakukan urus niaga pertukaran mata wang asing",
+  "foreignExchangeCurrencies": "Mata wang pertukaran asing selalu muncul secara berpasangan , contohnya: EUR/USD, GBP/USD, USD/JPY.",
+  "inForeignExchangeTrading": "Dalam perdagangan pertukaran asing , anda boleh membeli (panjang) atau menjual (pendek). Walau bagaimanapun , semasa anda berdagang pasangan mata wang asing secara dalam talian , anda tidak membeli atau menjual mata wang sebenar. Operasi anda sebenarnya adalah pertaruhan kenaikan atau kejatuhan pasangan mata wang. Kenaikan atau kejatuhan mata wang sebenarnya adalah kenaikan atau penurunan berbanding dengan mata wang lain.",
+  "throughWCG": "Melalui WCG , anda boleh berdagang mata wang langsung dan silang capital modal minimum untuk membuka akaun hanya US $ 100.",
+  "unlikeOther": "Tidak seperti pasaran kewangan lain market pasaran pertukaran asing tidak mempunyai pusat pertukaran atau lokasi fizikal yang tetap. Rangkaian urus niaga pertukaran mata wang asing global 24 jam dibentuk oleh bank companies syarikat besar dan peniaga individu. Ini bermaksud bahawa kadar pertukaran asing berubah-ubah 24 jam sehari , memberikan banyak peluang perdagangan.",
   "buyLong": "Buy-long",
-  "judgeTheMarket": "Judge the market as an upward trend, hold it after buying a financial product, and wait for it to rise before selling, to earn the intermediate spread.",
+  "judgeTheMarket": "Nilailah pasaran sebagai trend menaik , tahan setelah membeli produk kewangan , dan tunggu sehingga naik sebelum menjual , untuk mendapatkan spread antara.",
   "sellShort": "Sell-short",
-  "anticipatingThat": "Anticipating that the market will fall, sell the chips in hand and buy after the price drops; in short, it means selling first and then buying.",
-  "learnMore": "Learn More",
-  "startForexTrading": "Start forex trading in five easy steps",
-  "joinA24Hour": "Join a 24-hour global network of foreign exchange transactions composed of banks, large companies and individual traders",
-  "chooseAForeign": "Choose a foreign exchange currency pair",
-  "theFirstDecision": "The first decision to become a foreign exchange trader is to choose the foreign exchange currency pair you want to trade.",
-  "inWCG": "In WCG, we provide you with a wide range of products including direct and cross currency pairs. New traders often start trading with the currency pair they are most familiar with, and then look for trading opportunities in other currency pairs that are not so familiar.",
-  "determineTheDirection": "Determine the direction of buying and selling",
-  "afterChoosing": "After choosing your trading products, you should decide whether to buy or sell by speculating on the future direction of the market. A foreign exchange currency pair is composed of two currencies. The currency on the left hand side is called the \"base currency\" and the currency on the right hand side is called the \"quote currency\". Therefore:",
-  "ifYouThinkThatTheBaseCurrencyIsStronger": "If you think that the base currency is stronger than the quote currency, or the quote currency is relatively weaker than the base currency, then buy this currency pair.",
-  "ifYouThinkThatTheBaseCurrencyIsWeaker": "If you think that the base currency is weaker than the quote currency, or the quote currency is relatively stronger than the base currency, then sell the currency pair.",
-  "atTheSameTime": "At the same time, every currency pair has two prices at every moment. One is the bid price and the other is the ask price. The difference between the two prices is called the \"spread\", which is your transaction cost.",
-  "setStop": "Set stop loss/take profit",
-  "stopLossTakeProfit": "Stop loss/take profit is a preset price. When the exchange rate reaches this preset price, the corresponding position will be automatically closed.",
-  "thePurposeOf": "The purpose of setting stop loss/take profit is to lock the profit or loss of the position.",
-  "monitorYourTrading": "Monitor your trading positions",
-  "beforeThePositionIsClosed": "Before the position is closed, your profit and loss will change with price fluctuations.",
-  "soRealTimeMonitoring": "So real-time monitoring your profit and loss is very important. By monitoring the situation, you can add or close positions immediately when needed.",
-  "closeYourPosition": "Close your position",
-  "itIsExtremelyImportant": "It is extremely important for FOREX investors to timely close their position when identifying different phases of market movements.",
-  "FailingToDoSo": "Failing to do so are sometimes costly, in particular when the market moves against them.",
-  "foreignExchangeQuotes": "Foreign exchange quotes generally have five decimal places. Among them, the fourth decimal place is the one that requires the most attention. We often use pips to calculate profit and loss. Foreign exchange trading volume is generally counted in \"lots\", and 1 lot is equal to 100,000 base currency units. You can also trade units smaller than 1 lot, such as mini lots or micro lots. Mini lots correspond to 10,000 currency units (0.1lots), and micro lots correspond to 1,000 currency units (0.01lots).",
-  "supportLeverage": "Support leverage",
-  "youCanUtilizeLeverage": "You can utilize leverage to open a position larger than your capital amount. This approach may lead to more profits or losses. Therefore, it is very important to manage risks when conducting foreign exchange transactions.",
-  "fundingThreshold": "Funding threshold",
-  "whenTradingForeignExchange": "When trading foreign exchange online, you can decide the size of your open positions. Deposit a suitable amount of funds according to your own situation to participate in the transaction.",
-  "hoursTrading": "24 hours trading",
-  "fromMondayMorning": "From Monday morning to Saturday morning, the foreign exchange market is always open for trading. This makes the foreign exchange market an ideal trading market for amateur traders."
+  "anticipatingThat": "Menjangkakan bahawa pasaran akan jatuh , menjual kerepek di tangan dan beli setelah harga jatuh; secara ringkas , itu bermaksud menjual terlebih dahulu dan kemudian membeli.",
+  "learnMore": "fahami lebih lanjut",
+  "startForexTrading": "Mulakan perdagangan forex dalam lima langkah mudah",
+  "joinA24Hour": "Sertailah rangkaian transaksi pertukaran asing global 24 jam yang terdiri daripada bank companies syarikat besar dan peniaga individu",
+  "chooseAForeign": "Pilih pasangan mata wang asing",
+  "theFirstDecision": "Keputusan pertama untuk menjadi peniaga pertukaran asing adalah memilih pasangan mata wang asing yang anda ingin berdagang.",
+  "inWCG": "Di WCG , kami menyediakan anda pelbagai produk termasuk pasangan mata wang langsung dan silang. Pedagang baru sering memulakan perdagangan dengan pasangan mata wang yang paling mereka kenal , dan kemudian mencari peluang perdagangan dalam pasangan mata wang lain yang tidak begitu biasa.",
+  "determineTheDirection": "Tentukan arah jual beli",
+  "afterChoosing": "Setelah memilih produk perdagangan anda , anda harus memutuskan sama ada akan membeli atau menjual dengan membuat spekulasi mengenai arah pasaran masa depan. Pasangan mata wang asing terdiri daripada dua mata wang. Mata wang di sebelah kiri disebut \"mata wang asas\" dan mata wang di sebelah kanan disebut \"mata wang sebut harga\". Oleh itu:",
+  "ifYouThinkThatTheBaseCurrencyIsStronger": "Sekiranya anda berpendapat bahawa mata wang asas lebih kuat daripada mata wang sebut harga , atau mata wang sebut harga relatif lebih lemah daripada mata wang asas , maka beli pasangan mata wang ini.",
+  "ifYouThinkThatTheBaseCurrencyIsWeaker": "Sekiranya anda berpendapat bahawa mata wang asas lebih lemah daripada mata wang sebut harga , atau mata wang petikan relatif lebih kuat daripada mata wang asas , maka jual pasangan mata wang.",
+  "atTheSameTime": "Pada masa yang sama , setiap pasangan mata wang mempunyai dua harga setiap saat. Salah satunya adalah harga tawaran dan yang lain adalah harga permintaan. Perbezaan antara kedua harga tersebut disebut \"spread\" , yang merupakan kos transaksi anda .",
+  "setStop": "Tetapkan kerugian/ambil untung",
+  "stopLossTakeProfit": "Hentikan kerugian/mengambil untung adalah harga yang telah ditetapkan. Apabila kadar pertukaran mencapai harga yang ditetapkan ini position kedudukan yang sesuai akan ditutup secara automatik",
+  "thePurposeOf": "Tujuan menetapkan untung rugi / ambil untung adalah untuk mengunci untung atau rugi kedudukan.",
+  "monitorYourTrading": "Pantau perdagangan anda",
+  "beforeThePositionIsClosed": "Sebelum kedudukan ditutup profit keuntungan dan kerugian anda akan berubah dengan turun naik harga.",
+  "soRealTimeMonitoring": "Oleh itu, pemantauan keuntungan dan kerugian anda dalam masa nyata sangat penting. Dengan memantau keadaan , anda dapat menambah atau menutup posisi dengan segera apabila diperlukan.",
+  "closeYourPosition": "Tutup kedudukan anda",
+  "itIsExtremelyImportant": "Adalah sangat penting bagi pelabur FOREX untuk menutup kedudukan mereka tepat pada masanya ketika mengenal pasti fasa pergerakan pasaran yang berbeza.",
+  "FailingToDoSo": "Kegagalan untuk melakukannya kadang-kadang mahal, terutama ketika pasaran bergerak menentangnya.",
+  "foreignExchangeQuotes": "Petikan pertukaran asing umumnya mempunyai lima tempat perpuluhan. Antaranya place tempat perpuluhan keempat adalah tempat yang paling memerlukan perhatian. Kami selalu gunakan pip untuk mengira untung dan rugi. Jumlah dagangan tukaran mata wang asing secara amnya dikira dalam \"lot\" , dan 1 lot sama dengan 100,000 unit mata wang asas. Anda juga boleh memperdagangkan unit yang lebih kecil daripada 1 lot lots seperti lot mini atau lot mikro. Lot mini sesuai dengan 10,000 unit mata wang (0.1 lot) , dan lot mikro sepadan dengan 1.000 unit mata wang (0.01 lot).",
+  "supportLeverage": "Leverage sokongan",
+  "youCanUtilizeLeverage": "Anda boleh menggunakan leverage untuk membuka kedudukan yang lebih besar daripada jumlah modal anda. Pendekatan ini boleh menyebabkan lebih banyak keuntungan atau kerugian. Oleh itu , sangat penting untuk menguruskan risiko ketika melakukan urus niaga pertukaran mata wang asing.",
+  "fundingThreshold": "Ambang dana",
+  "whenTradingForeignExchange": "Semasa berdagang pertukaran mata wang asing secara dalam talian , anda boleh menentukan ukuran kedudukan terbuka anda. Deposit sejumlah dana yang sesuai dengan keadaan anda sendiri untuk mengambil bahagian dalam transaksi.",
+  "hoursTrading": "24 jam perdagangan",
+  "fromMondayMorning": "Dari pagi Isnin hingga pagi Sabtu market pasaran pertukaran asing sentiasa dibuka untuk perdagangan. Ini menjadikan pasaran pertukaran asing sebagai pasaran perdagangan yang ideal untuk peniaga amatur."
 }
