--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -6,7 +6,7 @@
   "contactUs": "Contact us",
   "telegram": "Telegram",
   "online": "online",
-  "whatsApp": "whatsApp",
+  "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "Client Portal",
   "downloadMT4": "Download MT4",
