--- a/src/i18n/locales/sa/home.json
+++ b/src/i18n/locales/sa/home.json
@@ -1,6 +1,6 @@
 {
-  "diversifiedProducts": "منتجات متنوعة لتلبية，احتياجاتك الاستثمارية",
-  "strongAdvantages": "مزايا قوية لتضمن， أمان معاملاتك",
+  "diversifiedProducts": "منتجات متنوعة لتلبية,احتياجاتك الاستثمارية",
+  "strongAdvantages": "مزايا قوية لتضمن, أمان معاملاتك",
   "highLiquidity": "سيولة عالية، خصم كبير على فروق الأسعار، تكلفة منخفضة وعائد مرتفع.",
   "safetyOfFunds": "أمان الأموال، عملية الإيداع والسحب السريعة، النظام السلس، الخدمة على مدار الساعة",
   "askProductsNow": "اطرح أسئلة حول منتجات التداول الآن",
@@ -11,7 +11,7 @@
   "fastPayment": "معالجة سريعة للمدفوعات",
   "theLatestTechnology": ".التقنيات الحديثة تجعل أحدث التقنيات لعملية المراجعة وفتح الحساب أسرع. يهدف نظام الدفع لأنيكون أحدث نظام يوفر أسرع خدمات للإيداع والسحب متاحة في السوق",
   "invest": "استثمار ",
-  "inNewChannels": "في قنوات جديدة ， اربح المال في WCG",
+  "inNewChannels": "في قنوات جديدة , اربح المال في WCG",
   "professionalEquals": "٪100مهنية تساوي100٪ ثقة",
   "mobileTradingSystem": "نظام التداول للهاتف المحمول",
   "WCGMobileTradingSystem": "يوفر نظام التداول للهاتف المحمول من WCG طريقة بسيطة ومريحة بحيث يمكن للعملاء التداول أثناء السفر والتنقل والرد الفوري على أخبار وبيانات السوق الفورية وبالتالي زيادة فرص التداول إلى أقصى حد",
