fix i18n text and wrap styles

--- a/src/i18n/locales/hk/home.json
+++ b/src/i18n/locales/hk/home.json
@@ -14,7 +14,7 @@
   "inNewChannels": "新渠道，聚金在WCG",
   "professionalEquals": "用百分的認真，贏得百分的信心",
   "mobileTradingSystem": "移動交易系統",
-  "WCGMobileTradingSystem": "WCG國際移動交易系統提供一種簡單方便的方法，以便客戶能夠在出行時進行交易，並立即對市場活動新聞和數據做出反應，從而實現機會的最大化。",
+  "WCGMobileTradingSystem": "WCG移動交易系統提供一種簡單方便的方法，以便客戶能夠在出行時進行交易，並立即對市場活動新聞和數據做出反應，從而實現機會的最大化。",
   "brandReputation": "品牌信譽及名師客服",
   "withFormalBusinessLicense": "正規國際金融市場營業牌照，受多國的法規監管保護。是互聯網“最具投資者信賴的貴金屬交易商”。",
   "preciousMetalsContract": "貴金屬合約",
