--- a/src/i18n/locales/hk/footer.json
+++ b/src/i18n/locales/hk/footer.json
@@ -8,7 +8,7 @@
   "provideYouWith": "憑藉業內最專業的經驗為您提供優質的投資服務",
   "allTradesInvolveRisks": "所有交易均涉及風險，您的損失可能大於您的入金。",
   "newbiesGettingStarted": "新手入門",
-  "getUSD": "免費獲得100，000美元的模擬資金",
+  "getUSD": "免費獲得 100,000 美元的模擬資金",
   "demoAccount": "開立模擬帳戶",
   "startRealFXTrading": "開始真實的外匯交易",
   "aRealAccount": "開立真實帳戶",
