--- a/src/i18n/locales/my/platform.json
+++ b/src/i18n/locales/my/platform.json
@@ -1,20 +1,46 @@
 {
-  "efficientAndFreeTrading": "Efficient and free trading experience starts with a powerful and fair trading platform， intuitive and easy to use， supports various order types， single-click order placing and charting tools.",
+  "efficientAndFreeTrading": "Efficient and free trading experience starts with a powerful and fair trading platform, intuitive and easy to use, supports various order types, single-click order placing and charting tools.",
   "personalTradingIndicators": "Personal trading indicators",
-  "MT4ProvidesSimpleAndEasyToUse": "MT4 provides simple and easy-to-use tools to formulate personal trading indicators according to your trading style， and can easily implement transactions through exclusive indicator libraries， scripts and Expert Advisors.",
+  "MT4ProvidesSimpleAndEasyToUse": "MT4 provides simple and easy-to-use tools to formulate personal trading indicators according to your trading style, and can easily implement transactions through exclusive indicator libraries, scripts and Expert Advisors.",
   "advancedChartTools": "Advanced chart tools",
-  "MT4Provides31Chart": "MT4 provides 31 chart analysis tools and 30 different trading indicators， you can set each indicator and chart category， establish parameters and display methods that suit you， so that you can get a satisfactory trading experience.",
+  "MT4Provides31Chart": "MT4 provides 31 chart analysis tools and 30 different trading indicators, you can set each indicator and chart category, establish parameters and display methods that suit you, so that you can get a satisfactory trading experience.",
   "diversifiedInvestmentTransactions": "Diversified investment transactions",
-  "theBestWayToManageRisk": "The best way to manage risk is to diversify investment. In WCG’s MT4 trading platform， you can choose from a series of trading products and markets to strengthen and diversify your investment.",
+  "theBestWayToManageRisk": "The best way to manage risk is to diversify investment. In WCG’s MT4 trading platform, you can choose from a series of trading products and markets to strengthen and diversify your investment.",
   "intuitiveAndEasyToUse": "Intuitive and easy to use",
-  "completeAndComprehensiveReports": "Complete and comprehensive reports， such as tracking number， opening price， transaction volume， account status of all orders and comprehensive information about positions， can be provided in the terminal window. You can view real-time market information anytime， anywhere， to assist you in making rational trading decisions. More supports for intelligent trading (EA) and strategy back-testing systems， to provide you with a high degree of trading flexibility， supervision and control.",
+  "completeAndComprehensiveReports": "Complete and comprehensive reports, such as tracking number, opening price, transaction volume, account status of all orders and comprehensive information about positions, can be provided in the terminal window. You can view real-time market information anytime, anywhere, to assist you in making rational trading decisions. More supports for intelligent trading (EA) and strategy back-testing systems, to provide you with a high degree of trading flexibility, supervision and control.",
   "automaticAdaptabilityAndScalability": "Automatic adaptability and scalability",
-  "throughTheFurtherDevelopment": "Through the further development of the API program， WCG MT4 can be perfectly integrated with your existing trading equipment. No matter where you are in any corner of the world， you can always access your trading platform to customize your indicators， execute instructions and execute transactions. ， Set limit prices， stop loss orders， and track market trends to ensure that you will not miss any trading opportunities and important market information even when you are outdoor.",
+  "throughTheFurtherDevelopment": "Through the further development of the API program, WCG MT4 can be perfectly integrated with your existing trading equipment. No matter where you are in any corner of the world, you can always access your trading platform to customize your indicators, execute instructions and execute transactions. , Set limit prices, stop loss orders, and track market trends to ensure that you will not miss any trading opportunities and important market information even when you are outdoor.",
   "downloadWCGMT4TradingPlatform": "Download WCG MT4 trading platform",
-  "leadingTradingAndNetworkTechnology": "Leading trading and network technology， with all the tools you need， bringing you the best trading experience",
+  "leadingTradingAndNetworkTechnology": "Leading trading and network technology, with all the tools you need, bringing you the best trading experience",
   "forPC": "MT4 for PC",
   "forMac": "MT4 for Mac",
   "multiAccountManagementSystem": "MT4 multi-account management system",
   "forIPhone": "MT4 for iPhone",
-  "forAndroid": "MT4 for Android"
+  "forAndroid": "MT4 for Android",
+  "MT4PcVersion": "MT4 PC version",
+  "MetaTrader4IsTheMostPopular": "MetaTrader 4 is the most popular online trading platform over the world and has established a leading position in the industry for many years. MetaTrader 4 (MT4) is specially designed for foreign exchange and futures transactions. Traders can analyze market trends, draw trading charts, and manage their positions and orders through its intuitive user interface and complete functions.",
+  "downloadImmediately": "Download Immediately",
+  "comprehensiveTechnicalAnalysisFunction": "Comprehensive technical analysis function",
+  "professionalIconFunctions": "Professional icon functions, trading indicators, intelligent trading (EAs), etc., can be applied to all traders with different levels of experience. Let you keep up to date with the latest developments in global foreign exchange margin and contract for difference (CFD) markets, and conduct professional transactions anytime, anywhere through WCG MT4",
+  "automaticChartingRecords": "Automatic charting records",
+  "selfDefinedTechnicalIndicators": "Self-defined technical indicators",
+  "supportMultipleWindows": "Support multiple windows",
+  "simpleChartingOperation": "Simple charting operation",
+  "nineChartingTimePeriods": "Nine charting time periods",
+  "whyChoose": "Why choose MetaTrader 4 platform?",
+  "MT4IsTheMostPopularForeign": "MT4 is the most popular foreign exchange trading platform in the world",
+  "itHasWonVariousAwards": "It has won various awards. The platform has 3 different chart types, 9 time periods, 39 languages",
+  "moreThan50Preset": "more than 50 preset technical indicators, and a fully customizable interface",
+  "aNumberOfTradingProducts": "Anumberoftradingproductscanbetraded",
+  "compatibleWithExpertAdvisors": "Compatible with Expert Advisors (smart automatic trading programs), custom indicators and other application tools",
+  "itHasAMobileVersion": "It has a mobile version of the trading platform. You can use the mobile APP to trade and manage orders anytime, anywhere.",
+  "provideAnAdvanced": "Provide an advanced notification signal system",
+  "downloadTheWCGMT4": "Download the WCG MT4 trading platform now,",
+  "usingMT4AllowsYou": "Using MT4 allows you to monitor the market more accurately, manage your positions quickly and efficiently, optimize trading strategies,enhance your trading advantages, and enjoy a perfect trading experience.",
+  "tradingSystem": "Trading system",
+  "includesCurrentPriceExecution": "Includes current price execution, trading in both directions, four types of pending orders and two stop-loss orders and trailing stop-loss functions. The one-click trading function allows you to send trading commands directly from the chart with one click. The built-in quotation chart provides an accurate way to judge the timing of the transaction.",
+  "technicalAnalysis": "Technical analysis",
+  "MT4ProvidesAMoreComprehensive": "MT4 provides a more comprehensive analysis opportunity. Each trading product can display nine time frames, allowing traders to see detailed price dynamics. Combine these tools to determine market trends, and powerful analysis capabilities help you analyze market trends more thoroughly and grasp the best moment.",
+  "safeAndConvenient": "Safe and convenient",
+  "advancedTradingAndAnalysisFunctions": "Advanced trading and analysis functions, friendly user interface, can help you easily understand all functions and operating rules. Meet the highest safety standards. The data exchange between the client terminal and the platform server is completely encrypted, so that your trading account is protected most safely"
 }
