--- a/src/i18n/locales/id/platform.json
+++ b/src/i18n/locales/id/platform.json
@@ -42,5 +42,9 @@
   "technicalAnalysis": "Technical analysis",
   "MT4ProvidesAMoreComprehensive": "MT4 provides a more comprehensive analysis opportunity. Each trading product can display nine time frames, allowing traders to see detailed price dynamics. Combine these tools to determine market trends, and powerful analysis capabilities help you analyze market trends more thoroughly and grasp the best moment.",
   "safeAndConvenient": "Safe and convenient",
-  "advancedTradingAndAnalysisFunctions": "Advanced trading and analysis functions, friendly user interface, can help you easily understand all functions and operating rules. Meet the highest safety standards. The data exchange between the client terminal and the platform server is completely encrypted, so that your trading account is protected most safely"
+  "advancedTradingAndAnalysisFunctions": "Advanced trading and analysis functions, friendly user interface, can help you easily understand all functions and operating rules. Meet the highest safety standards. The data exchange between the client terminal and the platform server is completely encrypted, so that your trading account is protected most safely",
+  "MT4APPVersion": "MT4 APP version (Android / iOS)",
+  "weProvideTheMT4MobileApplication": "We provide the MT4 mobile application, as long as you download and install the MT4 APP on your mobile phone or tablet computer, you can easily trade anytime, anywhere. MT4 iOS and Android APP provide a more simplified operation interface, which can monitor market trends more conveniently and quickly, and enjoy an excellent trading experience. Not only It is your daily assistant, but also your irreplaceable tool.",
+  "downloadTheIOSVersion": "Download the iOS version",
+  "downloadTheAndroidVersion": "Download the Android version"
 }
